I added a mockup, solved the button alignment problem, and changed the title position.

--- a/style.css
+++ b/style.css
@@ -1,21 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Jua&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+body{
+    font-family: "Jua", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+#task_list_area{
+    display: flex;
+    justify-content: center;
+}
+#tasks_list{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    padding: 0px;
+    background-color: beige;
+    height: 480px;
+    width: 960px;
+    flex-direction: column;
+}
 #task_element{
     display: flex;
     justify-content: center;
-    align-items: center;
+
     margin: 16px;
     list-style: "none";
     font-size: 48px;
 }
-#task_element_buttons{
+#task_container{
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    margin-left: 124px;
 }
-#delete_icon{
-    padding: 16px;
-}
-#check_icon{
-    padding: 16px;
+#task_text{
+    flex-grow: 1;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 10px;
+    min-width: 480px;
+    max-width: 480px;
 }
 #new_task{
     border-radius: 8px;
@@ -40,6 +65,6 @@
 }
 #title{
     display: flex;
-    justify-content: center;
-    margin: 48px;
+    justify-content: left;
+    margin-bottom: 48px;
 }
